--- a/publications.Rmd
+++ b/publications.Rmd
@@ -23,7 +23,8 @@ articles = bib %>%
 
 n.articles = nrow(articles)
 articles %>% 
-  arrange(desc(YEAR), authors) %>% 
+  mutate(CATEGORY = factor(CATEGORY, c("ARTICLE", "INPROCEEDINGS", "INBOOK") )) %>% 
+  arrange(desc(YEAR), CATEGORY, desc(authors)) %>% 
   transmute(number = paste0(row_number(), "."), citation) %>% 
   knitr::kable(col.names=c('',''))
 ```
@@ -37,7 +38,7 @@ h3("In Progress")
 
 ```{r in.progress, results='asis'}
 #-- In Progress
-inprogress = c("white-etal-endoexo", "li-porter-anomaly-dynamic-network",
+inprogress = c("tian2022-presidential", "white-etal-endoexo", "li-porter-anomaly-dynamic-network",
          "liao-porter-predictability", "clay-MISQ", "terrorism-book")
 articles = bib %>% 
   filter(BIBTEXKEY %in% inprogress) %>% 
